tests/sources/invalid/syntax/expression_operand_errors.fire
// Missing right-hand operands and malformed primary expressions.
a: int32 = 1 || ;  //~ ERROR FS-PARSE-0012 @17
//~^ ERROR FS-PARSE-0010 @18
b: int32 = 1 && ;  //~ ERROR FS-PARSE-0012 @17
//~^ ERROR FS-PARSE-0010 @18
c: int32 = 5 as ;  //~ ERROR FS-PARSE-0010 @17
d: int32 = 1 == ;  //~ ERROR FS-PARSE-0012 @17
//~^ ERROR FS-PARSE-0010 @18
e: int32 = 1 + ;  //~ ERROR FS-PARSE-0012 @16
//~^ ERROR FS-PARSE-0010 @17
f: int32 = 2 * ;  //~ ERROR FS-PARSE-0012 @16
//~^ ERROR FS-PARSE-0010 @17
g: int32 = 2 ** ;  //~ ERROR FS-PARSE-0012 @17
//~^ ERROR FS-PARSE-0010 @18
h: int32 = -;  //~ ERROR FS-PARSE-0012 @13
//~^ ERROR FS-PARSE-0010 @12
//~^^ ERROR FS-PARSE-0010 @14
i: int32 = new;  //~ ERROR FS-PARSE-0010 @15
//~^ ERROR FS-PARSE-0010 @15

// Compound assignment with a missing right-hand expression.
j: int32 = 1;
j += ;  //~ ERROR FS-PARSE-0012 @6
//~^ ERROR FS-PARSE-0010 @7

// Array slicing syntax (arr[a:b]) is not supported.
arr: int32[] = [1, 2, 3];
k: int32 = arr[0:1];  //~ ERROR FS-PARSE-0013 @17

// Array-element assignment with a missing right-hand expression.
arr[0] = ;  //~ ERROR FS-PARSE-0012 @10
//~^ ERROR FS-PARSE-0010 @11

// Postfix 'as' cast with nothing at all following it (runs off EOF, as
// opposed to `5 as ;` above where a ';' is at least present).
m: int32 = 1;
m = m as  //~ ERROR FS-PARSE-0010 @5
